<resources>
    <string name="app_name">PalliCare</string>
    <string name="img_logo_description">Logo</string>
    <string name="no">Nein</string>
    <string name="yes">Ja</string>
    <string name="help">Hilfe</string>
    <string name="ok">OK</string>
    <string name="accepted">Verstanden</string>
    <string name="quest_btn_prev">Zurück</string>
    <string name="quest_btn_next">Weiter</string>
    <string name="done">Abschließen</string>
    <string name="logout">Abmelden</string>
    <string name="permission_request">Erlaubnis benötigt</string>
    <string name="limited_functionality_title">Funktionalität eingeschränkt</string>
    <string name="limited_functionality_message">Ohne Berechtigung kann PalliCare die gewünschte Funktion nicht ausführen. Falls Sie die Funktion nutzen möchten, erlauben Sie bitte die Anfrage.</string>
    <string name="fine_request">Um Bluetooth verwenden zu können, erfordert Android unumgänglich, dass Sie die Berechtigung \"Gerätestandort\" für diese App erlauben. PalliCare nutzt die Berechtigung ausschließlich für den Bluetooth-Zugriff.</string>
    <string name="bluetooth_request">Damit Sie sich mit Ihrer Waage verbinden können müssen Sie im nächsten Fenster die drahtlose Funkverbindung \"Bluetooth\" anschalten.</string>
    <string name="base_show_help">Hilfe anzeigen</string>
    <string name="default_help_not_implemented">Bitte Hilfetext in getHelpText referenzieren.</string>
    <string name="permission_call_phone_header">Berechtigung Telefon</string>
    <string name="permission_call_phone_text">Im Folgenden benötigt die App einige Zugriffsberechtigungen. Falls es Ihnen nicht gut gehen sollte, können Sie im Notfall mit Hilfe der App eine Person anrufen, deren Nummer Sie vorher eingespeichert haben. Dafür benötigt die App Ihre Erlaubnis, jemanden anzurufen. Die App verwendet nicht Ihr Telefonbuch.</string>
    <string name="permission_call_phone_next">Weiter</string>
    <string name="permission_storage_header">Berechtigung Speicher</string>
    <string name="permission_storage_text">Die App erfasst auch Ihre Gesundheitsdaten, damit sie Ihnen Informationen über Ihre Gesundheit geben kann. Zur Speicherung Ihrer Daten benötigen wir Ihre Erlaubnis, dass diese Daten auf Ihrem Handyspeicher gespeichert werden können.</string>
    <string name="permission_storage_next">Weiter</string>
    <string name="permission_bluetooth_header">Berechtigung Bluetooth</string>
    <string name="permission_bluetooth_text">Zur Erfassung Ihrer Gesundheitsdaten wird die Waage mit Ihrem Smartphone über Bluetooth verbunden. Dafür wird der Zugriff auf Ihren Standort benötigt, damit die Verbindung funktionieren kann.</string>
    <string name="permission_bluetooth_next">Weiter</string>
    <string name="username_hint">Benutzername</string>
    <string name="password_hint">Passwort</string>
    <string name="btn_login">Anmelden</string>
    <string name="btn_register">Neuer Nutzer</string>
    <string name="register_type_hint">Wie wollen Sie diese App benutzen?</string>
    <string name="btn_register_patient">Patient / Patientin</string>
    <string name="btn_register_doctor">Arzt / Ärztin</string>
    <string name="register_string">Geben Sie Ihre Daten an</string>
    <string name="register_tab_patient">Patient</string>
    <string name="register_tab_nok">Angehöriger</string>
    <string name="register_hint_name">Vorname</string>
    <string name="register_hint_password">Passwort</string>
    <string name="register_hint_surname">Nachname</string>
    <string name="register_hint_mail">Email-Adresse</string>
    <string name="register_hint_phone">Telefon</string>
    <string name="register_register_text">Registrieren</string>
    <string name="help_text_register">Bitte wählen Sie aus, ob Sie die App als Patient oder Angehöriger nutzen. Danach geben Sie bitte Ihre persönlichen Daten für die Registrierung ein. Unter Passwort können Sie selber ein Passwort für diese App festlegen.</string>
    <string name="help_text_login">Benutzen Sie die App zum ersten Mal? Dann registieren Sie sich bitte unter Neuer Nutzer. Falls Sie sich schon registiert haben, geben Sie bitte Ihren Benutzernamen und das Passwort ein.</string>
    <string name="tv_patient_overview_biometric_text">Meine biometrischen Daten</string>
    <string name="btn_patient_overview_biometric_view">Ansehen</string>
    <string name="btn_patient_overview_biometric_input">Eingeben</string>
    <string name="btn_patient_overview_settings">Einstellungen</string>
    <string name="tv_patient_overview_psychometric_text">Wie geht es mir heute?</string>
    <string name="btn_patient_overview_psychometric_view">Ansehen</string>
    <string name="btn_patient_overview_psychometric_input">Ausfüllen</string>
    <string name="btn_access">Zugriff</string>
    <string name="btn_help">Anleitung</string>
    <string name="hint_quest">Wollen Sie den Fragebogen ausfüllen oder Ihre Werte ansehen? </string>
    <string name="hint_devices">Wollen Sie eine neue Messung hinzufügen oder Ihre Werte ansehen? </string>
    <string name="hint_help">Hier bekommen Sie Informationen über die verschiedenen Funktionen dieser App und wie man sie richtig verwendet. </string>
    <string name="hint_settings">..?? </string>
    <string name="help_text_patient_overview">Bitte wählen Sie eine Option. Unter Meine biometrischen Daten befinden sich Ihre Daten der Waage und Ihre Blutdruckwerte. Unter Wie geht es mir heute? befindet sich der Midos-Fragebogen. Unter Einstellungen können Sie Ihre persönlichen Daten sowie weitere App-Einstellungen finden. </string>
    <string name="quest_info_text_first">Bitte geben Sie an, wie stark heute Ihre Beschwerden sind.</string>
    <string name="quest_info_text_first_p2">Haben Sie andere Beschwerden?</string>
    <string name="quest_info_text_second">Bitte geben Sie an, wie Sie sich heute fühlen.</string>
    <string name="quest_info_text_third">Möchten Sie weitere Bemerkungen hinzufügen?</string>
    <string name="quest_info_text_first_p2_input">Bitte wählen Sie aus, welche anderen Beschwerden Sie heute haben.</string>
    <string name="quest_text_second">Befinden</string>
    <string name="quest_info_text_fourth">Haben Sie den Fragebogen selbst ausgefüllt?</string>
    <string name="quest_text_fourth">Selbsterfassung nicht möglich wegen:</string>
    <string name="quest_finish_text">Die Umfrage wird nun gespeichert</string>
    <string name="quest_finish_button_check">Überprüfen</string>
    <string name="quest_finished_text">Ihre Umfrage wurde erfolgreich abgegeben</string>
    <string name="quest_error">Beim Speichern wurde ein Problem festgestellt. Bitte probieren Sie Ihre Eingabe erneut.</string>
    <string name="quest_suffer_info">Woran leiden Sie?</string>
    <string name="quest_suffer_edit_hint">Bitte eingeben</string>
    <string name="quest_m1p2_select_max_2">Bitte wählen Sie nur die 2 schlimmsten Leiden.</string>
    <string name="quest_your_notes">Ihre Bemerkungen</string>
    <string-array name="quest_suffering_types">
        <item>Schmerzen</item>
        <item>Übelkeit</item>
        <item>Erbrechen</item>
        <item>Luftnot</item>
        <item>Verstopfung</item>
        <item>Schwäche</item>
        <item>Appetitmangel</item>
        <item>Müdigkeit</item>
        <item>Depressivität</item>
        <item>Angst</item>
    </string-array>
    <string-array name="quest_answer_none">
        <item>keine</item>
        <item>keine</item>
        <item>kein</item>
        <item>keine</item>
        <item>keine</item>
        <item>keine</item>
        <item>kein</item>
        <item>keine</item>
        <item>keine</item>
        <item>keine</item>
    </string-array>
    <string-array name="quest_answer_low">
        <item>leichte</item>
        <item>leichte</item>
        <item>leichtes</item>
        <item>leichte</item>
        <item>leichte</item>
        <item>leichte</item>
        <item>leichter</item>
        <item>leichte</item>
        <item>leichte</item>
        <item>leichte</item>
    </string-array>
    <string-array name="quest_answer_moderate">
        <item>mittlere</item>
        <item>mittlere</item>
        <item>mittleres</item>
        <item>mittlere</item>
        <item>mittlere</item>
        <item>mittlere</item>
        <item>mittlerer</item>
        <item>mittlere</item>
        <item>mittlere</item>
        <item>mittlere</item>
    </string-array>
    <string-array name="quest_answer_severe">
        <item>starke</item>
        <item>starke</item>
        <item>starkes</item>
        <item>starke</item>
        <item>starke</item>
        <item>starke</item>
        <item>starker</item>
        <item>starke</item>
        <item>starke</item>
        <item>starke</item>
    </string-array>
    <string-array name="quest_submission_not_possible">
        <item>Sprachproblemen</item>
        <item>Schwäche</item>
        <item>Kognitiven Störungen</item>
        <item>Patient lehnt ab</item>
        <item>keine Zeit</item>
    </string-array>
    <string-array name="quest_overall_condition">
        <item>sehr gut</item>
        <item>gut</item>
        <item>mittel</item>
        <item>schlecht</item>
        <item>sehr schlecht</item>
    </string-array>
    <string name="btn_about_me">Über mich</string>
    <string name="btn_next_of_kin">Kontakte</string>
    <string name="btn_notification">Benachrichtigungen</string>
    <string name="btn_settings_devices">Geräte verwalten</string>
    <string name="help_text_patient_settings">Bitte wählen Sie eine Option. Ihre persönlichen Daten finden Sie unter Über mich. Unter Kontakte befinden sich Ihre hinterlegten Notfallkontakte. Bei Geräte Verwalten können Sie Ihre Bluetooth-Geräte bearbeiten. </string>
    <string name="help_text_add_device">Bitte drücken sie auf die Schaltfläche \"Gerät suchen\", um unterstütze Geräte anzuzeigen. Klicken Sie dann auf ein Gerät, um es für die Benutzung einzurichten. Um ein hinzugefügtes  Gerät zu entfernen, drücken sie lange darauf.</string>
    <string name="btn_nok_settings_mydata">Kontaktdaten</string>
    <string name="btn_nok_settings_releatives">Angehörige</string>
    <string name="help_text_nok_home">Dies ist ihr Startbildschirm, von dem Sie alle Aktionen erreichen können.</string>
    <string name="help_text_nok_setting">Hier können Sie Ihre Kontaktdaten pflegen oder neue Angehörige hinzufügen. Außerdem können Sie festlegen, wie die App Sie benachrichtigen soll.</string>
    <string name="btn_weight">Gewicht</string>
    <string name="btn_bloodpressure">Blutdruck</string>
    <string name="btn_doctor_patientOne">Harry Potter</string>
    <string name="btn_doctor_patientTwo">Hermine Granger</string>
    <string name="btn_doctor_patientThree">Ron Weasley</string>
    <string name="btn_doctor_request">Neue Anfragen</string>
    <string name="doctor_infoText">Ihre Patienten, um die Sie sich kümmern!</string>
    <string name="welcome_message_tab_patient">Patient</string>
    <string name="welcome_message_tab_nok">Angehöriger</string>
    <string name="welcome_message_patient_text">Willkommen bei PalliCare! Ich werde dir dabei helfen, deine Gesundheitsdaten aufzuzeichnen. Ich erfasse deine Gesundheitsdaten, damit ich dir Informationen über deine Gesundheit geben kann.  Du bekommst einen sofortigen Überblick über deine gemessenen Werte und deinen  Gesundheitszustand. Auch kann ich im Notfall, falls es dir nicht gut gehen sollte, deine Familie kontaktieren. Durch dich kann ich auch anderen Menschen, die in einer ähnlichen Situation wie du sind, helfen. Ich kann deine gesammelten Daten zur Vorhersage des Gesundheitszustandes dieser Menschen nutzen. Lass uns beginnen!</string>
    <string name="welcome_message_button">Beginnen</string>
    <string name="tab_week">Woche</string>
    <string name="tab_month">Monat</string>
    <string name="tab_year">Jahr</string>
</resources>