<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/register_main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.RegisterActivity">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_register_infoText"
        style="@style/PalliCare.CardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/textView_register_infoText"
            style="@style/PalliCare.TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register_string"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_register_selections"
        style="@style/PalliCare.CardView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="32dp"
        app:layout_constraintBottom_toTopOf="@+id/register_register_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card_register_infoText">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/login_tab_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/defaultMargin"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.tabs.TabItem
                    android:id="@+id/tab_patient"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/register_tab_patient" />

                <com.google.android.material.tabs.TabItem
                    android:id="@+id/tab_nok"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/register_tab_nok" />


            </com.google.android.material.tabs.TabLayout>


            <EditText
                android:id="@+id/editText_firstname"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/defaultMargin"
                android:ems="10"
                android:hint="@string/register_hint_name"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/login_tab_layout" />

            <EditText
                android:id="@+id/editText_pwd"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/defaultMargin"
                android:ems="10"
                android:hint="@string/register_hint_password"
                android:inputType="textPassword"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editText_mail" />

            <EditText
                android:id="@+id/editText_lastname"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/defaultMargin"
                android:ems="10"
                android:hint="@string/register_hint_surname"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editText_firstname" />

            <EditText
                android:id="@+id/editText_mail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/defaultMargin"
                android:ems="10"
                android:hint="@string/register_hint_mail"
                android:inputType="textEmailAddress"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editText_phone" />

            <EditText
                android:id="@+id/editText_phone"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/defaultMargin"
                android:layout_marginTop="20dp"
                android:ems="10"
                android:hint="@string/register_hint_phone"
                android:inputType="phone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editText_lastname" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <Button
        android:id="@+id/register_register_btn"
        style="@style/PalliCare.Button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:longClickable="true"
        android:onClick="launchRegistration"
        android:text="@string/register_register_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:icon="@drawable/register_save"/>

</androidx.constraintlayout.widget.ConstraintLayout>