<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.doctor.DoctorActivity">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_doctor_infoText"
        style="@style/PalliCare.CardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView_doctor_infoText"
            style="@style/PalliCare.TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/doctor_infoText"
            app:layout_constraintBottom_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_doctor_myPatients"
        style="@style/PalliCare.CardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/card_doctor_newRequest"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card_doctor_infoText">

        <RelativeLayout
            android:id="@+id/relativeLayout_nextOfKin_myFamily"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/button_doctor_patientOne"
                style="@style/PalliCare.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_doctor_patientOne" />

            <Button
                android:id="@+id/button_doctor_patientTwo"
                style="@style/PalliCare.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/button_doctor_patientOne"
                android:text="@string/btn_doctor_patientTwo" />

            <Button
                android:id="@+id/button_doctor_patientThree"
                style="@style/PalliCare.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/button_doctor_patientTwo"
                android:text="@string/btn_doctor_patientThree" />
        </RelativeLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_doctor_newRequest"
        style="@style/PalliCare.CardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card_doctor_myPatients">

        <Button
            android:id="@+id/button_doctor_request"
            style="@style/PalliCare.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_doctor_request" />

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>