<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.WelcomeMessageActivity">

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tab_layout_welcome_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/defaultMargin"
        app:layout_constraintBottom_toTopOf="@+id/cv_welcome_message_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tabIndicatorHeight="@dimen/smallPadding"
        app:tabSelectedTextColor="@android:color/black">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tab_welcome_message_patient"
            style="@style/PalliCare.TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_message_tab_patient" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tab_welcome_message_nok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_message_tab_nok" />

    </com.google.android.material.tabs.TabLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_welcome_message_text"
        style="@style/PalliCare.CardView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/tab_layout_welcome_message"
        app:layout_constraintBottom_toTopOf="@+id/btn_welcome_message_begin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_welcome_message_text"
                style="@style/PalliCare.TextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/welcome_message_patient_text" />
        </ScrollView>

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btn_welcome_message_begin"
        style="@style/PalliCare.Button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:onClick="launchPermissionCallPhoneActivity"
        android:text="@string/welcome_message_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cv_welcome_message_text" />

</androidx.constraintlayout.widget.ConstraintLayout>