<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.patient.settings.PatientSettingsActivity">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_about_me"
        style="@style/PalliCare.CardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/card_device_settings"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="8dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button_about_me"
                style="@style/PalliCare.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_about_me"
                app:icon="@drawable/patient_person"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_editor_absoluteX="8dp" />

            <Button
                android:id="@+id/button_next_of_kin"
                style="@style/PalliCare.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_next_of_kin"
                app:icon="@drawable/nok_persons"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button_about_me"
                tools:layout_editor_absoluteX="8dp" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_device_settings"
        style="@style/PalliCare.CardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/button_notification"
        app:layout_constraintTop_toBottomOf="@+id/card_about_me"
        tools:layout_editor_absoluteX="8dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/button_device_settings"
                style="@style/PalliCare.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:onClick="launchManageDevicesActivity"
                android:text="@string/btn_settings_devices"
                app:icon="@drawable/settings_device_management"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_editor_absoluteX="8dp" />

            <Button
                android:id="@+id/button_access"
                style="@style/PalliCare.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_notification"
                app:icon="@drawable/notifications"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button_device_settings"
                tools:layout_editor_absoluteX="8dp" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <Button
        android:id="@+id/button_notification"
        style="@style/PalliCare.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="launchLogout"
        android:text="@string/logout"
        app:icon="@drawable/settings_logout"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:ignore="OnClick"
        tools:layout_editor_absoluteX="16dp" />

</androidx.constraintlayout.widget.ConstraintLayout>