<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.nok.NokSettingsActivity">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/materialCardView"
        style="@style/PalliCare.CardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/materialCardView4"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="8dp">

        <Button
            android:id="@+id/btn_nok_mydata"
            style="@style/PalliCare.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_nok_settings_mydata" />

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/materialCardView4"
        style="@style/PalliCare.CardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/materialCardView5"
        app:layout_constraintTop_toBottomOf="@+id/materialCardView"
        tools:layout_editor_absoluteX="8dp">

        <Button
            android:id="@+id/btn_nok_contacts"
            style="@style/PalliCare.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_nok_settings_releatives" />

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/materialCardView5"
        style="@style/PalliCare.CardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/materialCardView2"
        app:layout_constraintTop_toBottomOf="@+id/materialCardView4"
        tools:layout_editor_absoluteX="8dp">

        <Button
            android:id="@+id/btn_nok_notification"
            style="@style/PalliCare.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_notification" />

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/materialCardView2"
        style="@style/PalliCare.CardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/materialCardView5"
        tools:layout_editor_absoluteX="8dp">

        <Button
            android:id="@+id/btn_nok_settings"
            style="@style/PalliCare.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="launchLogout"
            android:text="@string/logout" />

    </com.google.android.material.card.MaterialCardView>
</androidx.constraintlayout.widget.ConstraintLayout>